C-M-t feels better for tmux prefix key toggle

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,7 +11,7 @@ bind t send-prefix
 unbind C-b
 
 # toggle prefix suitable for (double-decker) tmux in tmux windows
-bind-key -n C-M-x \
+bind-key -n C-M-t \
     if-shell "[ \"`tmux show-options prefix`\" = 'prefix C-t' ]" \
         "set-option prefix C-s; unbind -n M-Up;           unbind -n M-PageUp" \
         "set-option prefix C-t;   bind -n M-Up copy-mode;   bind -n M-PageUp copy-mode" \
