tmux C-M-a for quick switching windows, C-M-z for zoom panes

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -17,6 +17,13 @@ bind-key -n C-M-t \
         "set-option prefix C-t;   bind -n M-Up copy-mode;   bind -n M-PageUp copy-mode" \
         #
 
+# quicker access to frequently used prefix combos
+# quick select last window
+bind-key -n C-M-a select-window -l
+# quick toggle zoom pane
+bind-key -n C-M-z resize-pane -Z
+
+
 ## easy/uniform copy mode
 # See also: https://medium.freecodecamp.org/tmux-in-practice-scrollback-buffer-47d5ffa71c93
 # trigger copy mode by
@@ -235,10 +242,6 @@ bind-key -n C-M-\ if-shell "$is_vim" "send-keys C-\\ C-o C-M-\\" "select-pane -l
 bind-key -n C-M-m if-shell "$is_vim" "send-keys C-\\ C-o C-M-m"  "send-keys C-M-m"
 bind-key -n C-M-] if-shell "$is_vim" "send-keys C-\\ C-o C-M-]"  "send-keys C-M-]"
 bind-key -n C-M-[ if-shell "$is_vim" "send-keys C-\\ C-o C-M-["  "send-keys C-M-["
-
-
-# vimux zoom pane and return
-bind-key -n C-M-z if-shell "$is_vim" "send-keys C-\\ C-o C-M-z"  "select-pane -l"
 
 
 # Mac-specific settings
