tmux_version_is_less_than macro

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -23,6 +23,8 @@ bind-key -n C-M-a select-window -l
 # quick toggle zoom pane
 bind-key -n C-M-z resize-pane -Z
 
+## shorthands
+tmux_version_is_less_than="test `tmux -V | cut -d' ' -f2` \\< "
 
 ## easy/uniform copy mode
 # See also: https://medium.freecodecamp.org/tmux-in-practice-scrollback-buffer-47d5ffa71c93
@@ -30,7 +32,7 @@ bind-key -n C-M-z resize-pane -Z
 bind -n M-Up     copy-mode
 bind -n M-PageUp copy-mode
 # Scroll up/down by 1 line, half screen, whole screen
-if-shell "[ `tmux -V|cut -d' ' -f2` \\>= 2.4 ]"             "\
+if-shell "! $tmux_version_is_less_than 2.4"                 "\
     bind -T copy-mode M-Up        send-keys -X scroll-up    ;\
     bind -T copy-mode M-Down      send-keys -X scroll-down  ;\
     bind -T copy-mode M-PageUp    send-keys -X halfpage-up  ;\
@@ -40,7 +42,7 @@ if-shell "[ `tmux -V|cut -d' ' -f2` \\>= 2.4 ]"             "\
     "
 
 # UTF-8 (necessary up to 2.1)
-if-shell "[ `tmux -V|cut -d' ' -f2` \\< 2.2 ]" "\
+if-shell "$tmux_version_is_less_than 2.2"      "\
     set-option -g status-utf8 on               ;\
     set-window-option -g utf8 on               ;\
     "
@@ -97,7 +99,7 @@ set-window-option -g wrap-search off
 ## mouse options
 # mouse options changed since in 2.1 with some bugs not auto starting
 # See: https://github.com/tmux/tmux/issues/145
-if-shell "[ `tmux -V|cut -d' ' -f2` \\> 2.0 ]"                  "\
+if-shell "! $tmux_version_is_less_than 2.1"                     "\
     set-window-option -g mouse on                               ;\
     bind -n WheelUpPane \
         if-shell -F -t= \"#{mouse_any_flag}\" \
@@ -109,7 +111,7 @@ if-shell "[ `tmux -V|cut -d' ' -f2` \\> 2.0 ]"                  "\
                  select-pane -t=\\;             send-keys -M    ;\
     "
 # mouse options up to 2.0
-if-shell "[ ! `tmux -V|cut -d' ' -f2` \\> 2.0 ]" "\
+if-shell "$tmux_version_is_less_than 2.1"        "\
     set-window-option -g mode-mouse on           ;\
     set-window-option -g mouse-select-window on  ;\
     set-window-option -g mouse-select-pane on    ;\
@@ -216,7 +218,7 @@ unbind "\""; bind "\"" split-window -v
 unbind %   ; bind %    split-window -h
 # put split pane left/top of the current one, just like vim (-b supported since 2.0)
 # FIXME make below less ugly
-if-shell "[ ! `tmux -V|cut -d' ' -f2` \\< 2.0 ]"      "\
+if-shell "! $tmux_version_is_less_than 2.0"           "\
     unbind %       ; bind %        split-window -h -b ;\
     unbind \"\\\"\"; bind \"\\\"\" split-window -v -b ;\
     "
@@ -228,7 +230,7 @@ is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
 bind-key -n C-M-v if-shell "$is_vim" "send-keys C-\\ C-o C-M-v"  "split-window -h"
 bind-key -n C-M-s if-shell "$is_vim" "send-keys C-\\ C-o C-w s"  "split-window -v"
 # XXX ugliness below is inevitable for tmux >= 2.0
-if-shell "[ ! `tmux -V|cut -d' ' -f2` \\< 2.0 ]"                                                   "\
+if-shell "! $tmux_version_is_less_than 2.0"                                                   "\
     bind-key -n C-M-v if-shell \"\$is_vim\" \"send-keys C-\\\\ C-o C-M-v\"  \"split-window -h -b\" ;\
     bind-key -n C-M-s if-shell \"\$is_vim\" \"send-keys C-\\\\ C-o C-w s\"  \"split-window -v -b\" ;\
     "
