status style config for tmux 2.9a+

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -61,29 +61,30 @@ set-option -g default-terminal "screen-256color"
 #   curl http://www.frexx.de/xterm-256-notes/data/256colors2.pl | perl
 
 # status colours
-set-option -g status-bg black
-set-option -g status-fg default # for compatibility with tmux < 1.6
-set-option -g status-fg brightblack
-set-option -g status-attr none
-set-window-option -g window-status-fg brightblack
-set-window-option -g window-status-attr none
-set-option -g status-left-fg green
-set-option -g status-left-attr bright
-set-window-option -g window-status-current-fg green
-set-window-option -g window-status-current-attr bright
-set-window-option -g window-status-activity-fg yellow
-set-window-option -g window-status-activity-attr bright
-set-window-option -g window-status-bell-fg red
-set-window-option -g window-status-bell-attr bright
-
-# TODO tmux 2.0
-#set-option -g  status-style bg=black
-#set-option -ga status-style fg=brightblack
-#set-option -g  status-left-style fg=white,bright
-#set-window-option -g window-status-style fg=brightblack
-#set-window-option -g window-status-current-style fg=white,bright
-#set-window-option -g window-status-activity-style fg=green
-#set-window-option -g window-status-bell-style fg=red
+if-shell "$tmux_version_is_less_than 2.9a"                              "\
+    set-option -g status-bg black                                       ;\
+    set-option -g status-fg default                                     ;\
+    set-option -g status-fg brightblack                                 ;\
+    set-option -g status-attr none                                      ;\
+    set-window-option -g window-status-fg brightblack                   ;\
+    set-window-option -g window-status-attr none                        ;\
+    set-option -g status-left-fg green                                  ;\
+    set-option -g status-left-attr bright                               ;\
+    set-window-option -g window-status-current-fg green                 ;\
+    set-window-option -g window-status-current-attr bright              ;\
+    set-window-option -g window-status-activity-fg yellow               ;\
+    set-window-option -g window-status-activity-attr bright             ;\
+    set-window-option -g window-status-bell-fg red                      ;\
+    set-window-option -g window-status-bell-attr bright                 ;\
+    "                                                                   "\
+    set-option -g  status-style bg=black                                ;\
+    set-option -ga status-style fg=brightblack                          ;\
+    set-option -g  status-left-style fg=green,bright                    ;\
+    set-window-option -g window-status-style fg=brightblack             ;\
+    set-window-option -g window-status-current-style fg=green,bright    ;\
+    set-window-option -g window-status-activity-style fg=yellow,bright  ;\
+    set-window-option -g window-status-bell-style fg=red,bright         ;\
+    "
 
 # some more options
 set-option -g base-index 1
