--- a/.tmux.conf
+++ b/.tmux.conf
@@ -48,11 +48,11 @@ if-shell "$tmux_version_is_less_than 2.2"      "\
     "
 
 # status and title format
-set-option -g set-titles-string "#T - #I:#W#F#S^#H"
+set-option -g set-titles-string "#T - #I:#W#F#S^#h"
 set-option -g status-justify right
 set-option -g status-left "#T"
 set-option -g status-left-length 48
-set-option -g status-right "#[fg=white,bright]#S#[default]^#[fg=white]#H#[default]"
+set-option -g status-right "#[fg=white,bright]#S#[default]^#[fg=white]#h#[default]"
 set-option -g status-right-length 16
 
 # 256 color: XXX tmux should be launched with option -2.
