adapt to \\ parsing in latest tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -240,7 +240,7 @@ bind-key -n C-M-h if-shell "$is_vim" "send-keys C-\\ C-o C-M-h"  "select-pane -L
 bind-key -n C-M-j if-shell "$is_vim" "send-keys C-\\ C-o C-M-j"  "select-pane -D"
 bind-key -n C-M-k if-shell "$is_vim" "send-keys C-\\ C-o C-M-k"  "select-pane -U"
 bind-key -n C-M-l if-shell "$is_vim" "send-keys C-\\ C-o C-M-l"  "select-pane -R"
-bind-key -n C-M-\ if-shell "$is_vim" "send-keys C-\\ C-o C-M-\\" "select-pane -l"
+bind-key -n C-M-\\ if-shell "$is_vim" "send-keys C-\\ C-o C-M-\\" "select-pane -l"
 # vimux
 bind-key -n C-M-m if-shell "$is_vim" "send-keys C-\\ C-o C-M-m"  "send-keys C-M-m"
 bind-key -n C-M-] if-shell "$is_vim" "send-keys C-\\ C-o C-M-]"  "send-keys C-M-]"
