tmux split-pane/new-window keeps workdir
no more tmux-cwd-sync bpm needed

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -134,9 +134,9 @@ if-shell "$tmux_version_is_less_than 2.1"        "\
 
 # window
 unbind ^C
-bind ^C new-window
+bind ^C new-window -c "#{pane_current_path}"
 unbind c
-bind c new-window
+bind c new-window -c "#{pane_current_path}"
 
 # session
 unbind S
@@ -215,13 +215,14 @@ unbind Tab
 bind Tab select-pane -t :.+
 bind C-o select-pane -t :.-
 
-unbind "\""; bind "\"" split-window -v
-unbind %   ; bind %    split-window -h
+# open new panes in the current directory
+unbind "\""; bind "\"" split-window -v -c "#{pane_current_path}"
+unbind %   ; bind %    split-window -h -c "#{pane_current_path}"
 # put split pane left/top of the current one, just like vim (-b supported since 2.0)
 # FIXME make below less ugly
 if-shell "! $tmux_version_is_less_than 2.0"           "\
-    unbind %       ; bind %        split-window -h -b ;\
-    unbind \"\\\"\"; bind \"\\\"\" split-window -v -b ;\
+    unbind %       ; bind %        split-window -h -b -c '#{pane_current_path}';\
+    unbind \"\\\"\"; bind \"\\\"\" split-window -v -b -c '#{pane_current_path}';\
     "
 
 ## Vim and Tmux better together: https://blog.bugsnag.com/tmux-and-vim/
