handy tmux kill-session

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -143,6 +143,8 @@ unbind S
 bind S new-session
 unbind ^S
 bind ^S switch-client -l
+# kill-session
+bind ^K confirm-before kill-session
 
 # break window into new session
 unbind @
