--- a/.tmux.conf
+++ b/.tmux.conf
@@ -232,10 +232,12 @@ is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
     | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
 # quicker vim-like split
 bind-key -n C-M-v if-shell "$is_vim" "send-keys C-\\ C-o C-M-v"  "split-window -h"
+bind-key -n C-M-n if-shell "$is_vim" "send-keys C-\\ C-o C-w s"  "split-window -v"
 bind-key -n C-M-s if-shell "$is_vim" "send-keys C-\\ C-o C-w s"  "split-window -v"
 # XXX ugliness below is inevitable for tmux >= 2.0
 if-shell "! $tmux_version_is_less_than 2.0"                                                   "\
     bind-key -n C-M-v if-shell \"\$is_vim\" \"send-keys C-\\\\ C-o C-M-v\"  \"split-window -h -b\" ;\
+    bind-key -n C-M-n if-shell \"\$is_vim\" \"send-keys C-\\\\ C-o C-w s\"  \"split-window -v -b\" ;\
     bind-key -n C-M-s if-shell \"\$is_vim\" \"send-keys C-\\\\ C-o C-w s\"  \"split-window -v -b\" ;\
     "
 # uniform vim-tmux-navigation with Ctrl+Alt+h/j/k/l
