tmux Ctrl+Opt/Alt key polish + shortcuts for lazygit, vim, etc.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -231,14 +231,14 @@ if-shell "! $tmux_version_is_less_than 2.0"           "\
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
     | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
 # quicker vim-like split
-bind-key -n C-M-v if-shell "$is_vim" "send-keys C-\\ C-o C-M-v"  "split-window -h"
-bind-key -n C-M-n if-shell "$is_vim" "send-keys C-\\ C-o C-w s"  "split-window -v"
-bind-key -n C-M-s if-shell "$is_vim" "send-keys C-\\ C-o C-w s"  "split-window -v"
+bind-key -n C-M-v if-shell "$is_vim" "send-keys C-\\ C-o C-M-v"  "split-window -h -c '#{pane_current_path}'"
+bind-key -n C-M-n if-shell "$is_vim" "send-keys C-\\ C-o C-w s"  "split-window -v -c '#{pane_current_path}'"
+bind-key -n C-M-s if-shell "$is_vim" "send-keys C-\\ C-o C-w s"  "split-window -v -c '#{pane_current_path}'"
 # XXX ugliness below is inevitable for tmux >= 2.0
 if-shell "! $tmux_version_is_less_than 2.0"                                                   "\
-    bind-key -n C-M-v if-shell \"\$is_vim\" \"send-keys C-\\\\ C-o C-M-v\"  \"split-window -h -b\" ;\
-    bind-key -n C-M-n if-shell \"\$is_vim\" \"send-keys C-\\\\ C-o C-w s\"  \"split-window -v -b\" ;\
-    bind-key -n C-M-s if-shell \"\$is_vim\" \"send-keys C-\\\\ C-o C-w s\"  \"split-window -v -b\" ;\
+    bind-key -n C-M-v if-shell \"\$is_vim\" \"send-keys C-\\\\ C-o C-M-v\"  \"split-window -h -b -c '#{pane_current_path}'\" ;\
+    bind-key -n C-M-n if-shell \"\$is_vim\" \"send-keys C-\\\\ C-o C-w s\"  \"split-window -v -b -c '#{pane_current_path}'\" ;\
+    bind-key -n C-M-s if-shell \"\$is_vim\" \"send-keys C-\\\\ C-o C-w s\"  \"split-window -v -b -c '#{pane_current_path}'\" ;\
     "
 # uniform vim-tmux-navigation with Ctrl+Alt+h/j/k/l
 bind-key -n C-M-h if-shell "$is_vim" "send-keys C-\\ C-o C-M-h"  "select-pane -L"
@@ -251,6 +251,11 @@ bind-key -n C-M-m if-shell "$is_vim" "send-keys C-\\ C-o C-M-m"  "send-keys C-M-
 bind-key -n C-M-] if-shell "$is_vim" "send-keys C-\\ C-o C-M-]"  "send-keys C-M-]"
 bind-key -n C-M-[ if-shell "$is_vim" "send-keys C-\\ C-o C-M-["  "send-keys C-M-["
 
+# quick commands in new pane with Ctrl+Opt
+bind-key -n C-M-f split-window -h -b -c "#{pane_current_path}" vim +Files
+bind-key -n C-M-t split-window -h -b -c "#{pane_current_path}" vim +Tags
+bind-key -n C-M-g split-window -h -b -c "#{pane_current_path}" lazygit
+bind-key -n C-M-c split-window -v -b -c "#{pane_current_path}" claude
 
 # Mac-specific settings
 if-shell "type reattach-to-user-namespace" 'set-option -g default-command "reattach-to-user-namespace -l env SHLVL=0 bash -l"'
