--- a/.tmux.conf
+++ b/.tmux.conf
@@ -231,25 +231,21 @@ if-shell "! $tmux_version_is_less_than 2.0"           "\
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
     | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
 # quicker vim-like split
-bind-key -n C-M-v if-shell "$is_vim" "send-keys C-\\ C-o C-M-v"  "split-window -h -c '#{pane_current_path}'"
-bind-key -n C-M-n if-shell "$is_vim" "send-keys C-\\ C-o C-w s"  "split-window -v -c '#{pane_current_path}'"
-bind-key -n C-M-s if-shell "$is_vim" "send-keys C-\\ C-o C-w s"  "split-window -v -c '#{pane_current_path}'"
-# XXX ugliness below is inevitable for tmux >= 2.0
-if-shell "! $tmux_version_is_less_than 2.0"                                                   "\
-    bind-key -n C-M-v if-shell \"\$is_vim\" \"send-keys C-\\\\ C-o C-M-v\"  \"split-window -h -b -c '#{pane_current_path}'\" ;\
-    bind-key -n C-M-n if-shell \"\$is_vim\" \"send-keys C-\\\\ C-o C-w s\"  \"split-window -v -b -c '#{pane_current_path}'\" ;\
-    bind-key -n C-M-s if-shell \"\$is_vim\" \"send-keys C-\\\\ C-o C-w s\"  \"split-window -v -b -c '#{pane_current_path}'\" ;\
-    "
+bind-key -n C-M-v split-window -h -b -c "#{pane_current_path}"
+bind-key -n C-M-n split-window -v -b -c "#{pane_current_path}"
+bind-key -n C-M-s split-window -v -b -c "#{pane_current_path}"
+bind-key -n C-M-\\ select-pane -l  # and quick switching btwn last panes
+bind-key -n C-M-w if-shell "$is_vim" "send-keys C-\\\\ C-o C-M-w"  "confirm-before kill-pane"
+
 # uniform vim-tmux-navigation with Ctrl+Alt+h/j/k/l
-bind-key -n C-M-h if-shell "$is_vim" "send-keys C-\\ C-o C-M-h"  "select-pane -L"
-bind-key -n C-M-j if-shell "$is_vim" "send-keys C-\\ C-o C-M-j"  "select-pane -D"
-bind-key -n C-M-k if-shell "$is_vim" "send-keys C-\\ C-o C-M-k"  "select-pane -U"
-bind-key -n C-M-l if-shell "$is_vim" "send-keys C-\\ C-o C-M-l"  "select-pane -R"
-bind-key -n C-M-\\ if-shell "$is_vim" "send-keys C-\\ C-o C-M-\\" "select-pane -l"
-# vimux
-bind-key -n C-M-m if-shell "$is_vim" "send-keys C-\\ C-o C-M-m"  "send-keys C-M-m"
-bind-key -n C-M-] if-shell "$is_vim" "send-keys C-\\ C-o C-M-]"  "send-keys C-M-]"
-bind-key -n C-M-[ if-shell "$is_vim" "send-keys C-\\ C-o C-M-["  "send-keys C-M-["
+bind-key -n C-M-h  if-shell "$is_vim" "send-keys C-\\\\ C-o C-M-h"  "select-pane -L"
+bind-key -n C-M-j  if-shell "$is_vim" "send-keys C-\\\\ C-o C-M-j"  "select-pane -D"
+bind-key -n C-M-k  if-shell "$is_vim" "send-keys C-\\\\ C-o C-M-k"  "select-pane -U"
+bind-key -n C-M-l  if-shell "$is_vim" "send-keys C-\\\\ C-o C-M-l"  "select-pane -R"
+#bind-key -n C-M-\\ if-shell "$is_vim" "send-keys C-\\\\ C-o C-M-\\\\" "select-pane -l"  # XXX vim tmux-navigator is not perfect and can lost track of the last tmux pane and lock up within vim
+# vimux flow  # XXX no special dynamic binding needed; easier to handle NORMAL/INSERT in vim
+#bind-key -n C-M-m  if-shell "$is_vim" "send-keys C-M-m"  "send-keys C-M-m"
+#bind-key -n C-M-]  if-shell "$is_vim" "send-keys C-\\\\ C-o C-M-]"  "send-keys C-M-]"
 
 # quick commands in new pane with Ctrl+Opt
 bind-key -n C-M-f split-window -h -b -c "#{pane_current_path}" vim +Files
