bring back status bar and stuff

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -24,6 +24,13 @@ bind-key -n C-M-a select-window -l
 bind-key -n C-M-z resize-pane -Z
 
 
+# status and title format
+set-option -g set-titles-string "#T - #I:#W#F#S^#h"
+set-option -g status-justify right
+set-option -g status-left "#T"
+set-option -g status-left-length 48
+set-option -g status-right "#[fg=white,bright]#S#[default]^#[fg=white]#h#[default]"
+set-option -g status-right-length 16
 ###############################################################################
 # TPM Plugins
 ###############################################################################
@@ -130,6 +137,7 @@ bind ^K confirm-before kill-session
 
 # break window into new session
 unbind @
+#bind @ command-prompt -I "1" -p "(break window to new-session)" "new-session -d -n'moving' -s'%1' 'sleep 1'; swap-window -t'%1:moving'; switch-client -t'%1:'"
 bind @ split-window -d -h -l0 \
     'n=$(tmux list-sessions -F "#S" | grep "^[0-9]\\+$" | sort -nr | head -n 1); let n++; \
         tmux command-prompt -I "$n" -p "(break window into new session)" \
