--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,46 +1,66 @@
 # netj's .tmux.conf
 # Author: Jaeho Shin <netj@sparcs.org>
 # Created: 2010-12-26
+# Re-Created: 2026-02-01  # w/ tpm
 
 # C-t as prefix
 set-option -g prefix C-t
-unbind C-t
-bind C-t last-window
-unbind t
-bind t send-prefix
+unbind C-t; bind C-t last-window
+unbind t; bind t send-prefix
 unbind C-b
-
 # toggle prefix suitable for (double-decker) tmux in tmux windows
-bind-key -n C-M-t \
+bind -n C-M-t \
     if-shell "[ \"`tmux show-options prefix`\" = 'prefix C-t' ]" \
         "set-option prefix C-s; unbind -n M-Up;           unbind -n M-PageUp" \
         "set-option prefix C-t;   bind -n M-Up copy-mode;   bind -n M-PageUp copy-mode" \
         #
 
-# quicker access to frequently used prefix combos
-# quick select last window
-bind-key -n C-M-a select-window -l
-# quick toggle zoom pane
-bind-key -n C-M-z resize-pane -Z
-
+set -g default-terminal "screen-256color"  # FIXME handle TERM=tmux-256color from elsewhere
+set -g mouse on
 
 # status and title format
-set-option -g set-titles-string "#T - #I:#W#F#S^#h"
-set-option -g status-justify right
-set-option -g status-left "#T"
-set-option -g status-left-length 48
-set-option -g status-right "#[fg=white,bright]#S#[default]^#[fg=white]#h#[default]"
-set-option -g status-right-length 16
+set -g set-titles on
+set -g set-titles-string "#T - #I:#W#F#S^#h"
+set -g status-justify absolute-centre  # to show windows on the center
+set -g status-left "#T"
+set -g status-left-length 48
+set -g status-right "#[fg=white,bright]#S#[default]^#[fg=white]#h#[default]"
+set -g status-right-length 16
+set -g  status-style bg=black
+set -ga status-style fg=brightblack
+set -g  status-left-style fg=green,bright
+setw -g window-status-style fg=brightblack
+setw -g window-status-current-style fg=green,bright
+setw -g window-status-activity-style fg=yellow,bright
+setw -g window-status-bell-style fg=red,bright
+
 ###############################################################################
 # TPM Plugins
 ###############################################################################
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'nhdaly/tmux-better-mouse-mode'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
+#set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'dracula/tmux'
+
+# dracula theme
+set -g @dracula-show-powerline true
+set -g @dracula-plugins "git cwd ssh-session"
+#set -g @dracula-show-left-icon session
+set -g @dracula-show-left-icon "#[fg=darkblue,bold]#T"  # title
+#set -g @dracula-border-contrast true
+
+set -g @dracula-cwd-max-dirs "5"
+#set -g @dracula-cwd-max-chars "64"
+#set -g @dracula-show-ssh-only-when-connected true
+
+#set -g @dracula-time-format "%F %a %R:%S"
+#set -g @dracula-refresh-rate 1
+
+set -g @dracula-show-flags true  # FIXME recover window status color config
 
 # vim-tmux-navigator with C-M-h/j/k/l (preserving custom bindings)
 set -g @vim_navigator_mapping_left "C-M-h"
@@ -54,18 +74,13 @@ set -g @resurrect-strategy-vim 'session'
 set -g @resurrect-capture-pane-contents 'on'
 
 # continuum
-set -g @continuum-restore 'on'
+#set -g @continuum-restore 'on'
 
-# dracula theme
-set -g @dracula-show-powerline true
-set -g @dracula-plugins "weather git time"
-set -g @dracula-show-left-icon session
-set -g @dracula-show-flags true
 
-# pane border status at top of each pane
-set-option -g pane-border-status top
-set-option -g pane-border-format " #P: #{pane_current_command} "
-
+###############################################################################
+# Initialize TPM (keep this before local config sourcing)
+###############################################################################
+run '~/.tmux/plugins/tpm/tpm'
 
 ###############################################################################
 # Base Options (override sensible defaults where needed)
@@ -74,18 +89,20 @@ set-option -g base-index 1
 set-option -g history-limit 10000000
 set-option -g status-keys vi
 set-window-option -g mode-keys vi
-set-option -g set-titles on
-set-option -g set-titles-string "#T - #I:#W#F#S^#h"
 set-option -g display-time 2500
 set-window-option -g monitor-activity on
 set-window-option -g clock-mode-style 24
 set-window-option -g wrap-search off
 
-# 256 color: XXX tmux should be launched with option -2.
-set-option -g default-terminal "screen-256color"
-# You can check 256 color support with this command:
-#   curl http://www.frexx.de/xterm-256-notes/data/256colors2.pl | perl
+# override @dracula to have colored window status
+set-window-option -g window-status-style fg=brightblack
+set-window-option -g window-status-current-style fg=green,bright
+set-window-option -g window-status-activity-style fg=yellow,bright
+set-window-option -g window-status-bell-style fg=red,bright
 
+# pane border status at top of each pane
+set-option -g pane-border-status top
+set-option -g pane-border-format " #P: #{pane_current_command} "
 
 ###############################################################################
 # Copy Mode
@@ -103,35 +120,18 @@ bind -T copy-mode PageDown    send-keys -X page-down
 
 
 ###############################################################################
-# Mouse Options
-###############################################################################
-set-window-option -g mouse on
-bind -n WheelUpPane \
-    if-shell -F -t= "#{mouse_any_flag}" \
-        "send-keys -M" \
-        "if -Ft= '#{pane_in_mode}' \
-            'send-keys -M' \
-            'select-pane -t=; copy-mode -e; send-keys -M'"
-bind -n WheelDownPane select-pane -t=\; send-keys -M
-
-
-###############################################################################
 # Key Bindings
 ###############################################################################
-
 ## Some easier ones GNU Screen style key bindings, which I'm pretty used to
-
-# window
-unbind ^C
-bind ^C new-window -c "#{pane_current_path}"
-unbind c
-bind c new-window -c "#{pane_current_path}"
-
+# new window in the same working directory
+unbind ^C; bind ^C new-window -c "#{pane_current_path}"
+unbind  c; bind  c new-window -c "#{pane_current_path}"
+# new pane in the same working directory
+unbind '"' ; bind '"' split-window -v -b -c "#{pane_current_path}"
+unbind   % ; bind   % split-window -h -b -c "#{pane_current_path}"
 # session
-unbind S
-bind S new-session
-unbind ^S
-bind ^S switch-client -l
+unbind  S; bind  S new-session
+#unbind ^S; bind ^S switch-client -l
 # kill-session
 bind ^K confirm-before kill-session
 
@@ -144,86 +144,71 @@ bind @ split-window -d -h -l0 \
             "new-session -d -s\"%1\" -n moving \"sleep 1\"; swap-window -t\"%1:moving\"; switch-client -t\"%1:\""'
 
 # detach
-unbind ^D
-bind ^D detach
+unbind ^D; bind ^D detach
 # make this client the only one by detaching all other clients
-unbind O
-bind O attach-session -d
+unbind O; bind O attach-session -d
 
 # next ^@ ^N sp n
-unbind ^N
-bind ^N next-window
-unbind n
-bind n next-window
+unbind ^N; bind ^N next-window
+unbind  n; bind  n next-window
 
 # prev ^H ^P p ^?
-unbind ^P
-bind ^P previous-window
-unbind p
-bind p previous-window
+unbind ^P; bind ^P previous-window
+unbind  p; bind  p previous-window
 
 # windows ^W w
-unbind ^W
-bind ^W choose-window
+unbind ^W; bind ^W choose-window
 
 # redisplay ^L
-unbind ^L
-bind ^L refresh-client
+unbind ^L; bind ^L refresh-client
 
 # reload config
-unbind ^R
-bind ^R source ~/.tmux.conf
+unbind ^R; bind ^R source ~/.tmux.conf
 
 # record window
-bind-key | pipe-pane -o 'cat >>~/tmux-#S.#I.#P.log'
+bind | pipe-pane -o 'cat >>~/tmux-#S.#I.#P.log'
 
 # toggle activity/silence monitoring
 bind M setw monitor-activity on\; setw monitor-silence 0
 bind m command-prompt -p "monitor-silence (seconds)" "setw monitor-activity off; setw monitor-silence %%"
 
 
-## vim style key bindings
-
+## Vim and Emacs inspired key bindings
 # move around panes with j and k, a bit like vim
 unbind l
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
-
 # resize panes like vim
 bind < resize-pane -L 1
 bind > resize-pane -R 1
 bind - resize-pane -D 1
 bind + resize-pane -U 1
-
-
 ## key bindings compatible with my Emacs config
 unbind Tab
 bind Tab select-pane -t :.+
 bind C-o select-pane -t :.-
 
-# open new panes in the current directory
-unbind "\""; bind "\"" split-window -v -b -c "#{pane_current_path}"
-unbind %   ; bind %    split-window -h -b -c "#{pane_current_path}"
+## Ctrl+Opt/Alt: quicker access to frequently used prefix combos
+# quick select last window
+bind -n C-M-a select-window -l
+# quick toggle zoom pane
+bind -n C-M-z resize-pane -Z
 
-
-###############################################################################
-# Vim and Tmux better together
-###############################################################################
-is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
-    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
 # quicker vim-like split
-bind-key -n C-M-v split-window -h -b -c "#{pane_current_path}"
-bind-key -n C-M-n split-window -v -b -c "#{pane_current_path}"
-bind-key -n C-M-s split-window -v -b -c "#{pane_current_path}"
-bind-key -n C-M-\\ select-pane -l  # and quick switching btwn last panes
-bind-key -n C-M-w if-shell "$is_vim" "send-keys C-\\\\ C-o C-M-w"  "confirm-before kill-pane"
+bind -n C-M-v split-window -h -b -c "#{pane_current_path}"
+bind -n C-M-n split-window -v -b -c "#{pane_current_path}"
+bind -n C-M-s split-window -v -b -c "#{pane_current_path}"
+bind -n C-M-\\ select-pane -l  # and quick switching btwn last panes
+bind -n C-M-w if-shell "$is_vim" "send-keys C-\\\\ C-o C-M-w"  "confirm-before kill-pane"
 
 # quick commands in new pane with Ctrl+Opt
-bind-key -n C-M-f split-window -h -b -c "#{pane_current_path}" vim +Files
-bind-key -n C-M-g split-window -h -b -c "#{pane_current_path}" lazygit
-bind-key -n C-M-c split-window -v -b -c "#{pane_current_path}" claude
+bind -n C-M-f split-window -h -b -c "#{pane_current_path}" vim +Files
+bind -n C-M-t split-window -h -b -c "#{pane_current_path}" vim +Tags
+bind -n C-M-g split-window -h -b -c "#{pane_current_path}" lazygit
+bind -n C-M-c split-window -v -b -c "#{pane_current_path}" claude
 
 
 ###############################################################################
@@ -231,12 +216,6 @@ bind-key -n C-M-c split-window -v -b -c "#{pane_current_path}" claude
 ###############################################################################
 if-shell "type reattach-to-user-namespace" 'set-option -g default-command "reattach-to-user-namespace -l env SHLVL=0 bash -l"'
 if-shell "! type reattach-to-user-namespace" 'set-option -g default-command "env SHLVL=0 bash -l"'
-
-
-###############################################################################
-# Initialize TPM (keep this before local config sourcing)
-###############################################################################
-run '~/.tmux/plugins/tpm/tpm'
 
 
 ###############################################################################
