tmux select window/pane bindings

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,7 +21,7 @@ set -g mouse on
 # status and title format
 set -g set-titles on
 set -g set-titles-string "#T - #I:#W#F#S^#h"
-set -g status-justify absolute-centre  # to show windows on the center
+set -g status-justify right
 set -g status-left "#T"
 set -g status-left-length 48
 set -g status-right "#[fg=white,bright]#S#[default]^#[fg=white]#h#[default]"
@@ -86,6 +86,7 @@ run '~/.tmux/plugins/tpm/tpm'
 # Base Options (override sensible defaults where needed)
 ###############################################################################
 set-option -g base-index 1
+set-option -g pane-base-index 1
 set-option -g history-limit 10000000
 set-option -g status-keys vi
 set-window-option -g mode-keys vi
@@ -122,6 +123,28 @@ bind -T copy-mode PageDown    send-keys -X page-down
 ###############################################################################
 # Key Bindings
 ###############################################################################
+## prefix + number: select window directly (1-indexed)
+bind 1 select-window -t :1
+bind 2 select-window -t :2
+bind 3 select-window -t :3
+bind 4 select-window -t :4
+bind 5 select-window -t :5
+bind 6 select-window -t :6
+bind 7 select-window -t :7
+bind 8 select-window -t :8
+bind 9 select-window -t :9
+## prefix + shift+number: select pane (US keyboard: !=1 @=2 #=3 $=4 %=5 ^=6 &=7 *=8 (=9 )=10)
+bind  !  select-pane -t .1
+bind  @  select-pane -t .2
+bind '#' select-pane -t .3
+bind '$' select-pane -t .4
+bind  %  select-pane -t .5
+bind  ^  select-pane -t .6
+bind  &  select-pane -t .7
+bind  *  select-pane -t .8
+bind  (  select-pane -t .9
+bind  )  select-pane -t .10
+
 ## Some easier ones GNU Screen style key bindings, which I'm pretty used to
 # new window in the same working directory
 unbind ^C; bind ^C new-window -c "#{pane_current_path}"
