tmux.conf abbrev to set/setw

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,15 +4,15 @@
 # Re-Created: 2026-02-01  # w/ tpm
 
 # C-t as prefix
-set-option -g prefix C-t
+set -g prefix C-t
 unbind C-t; bind C-t last-window
 unbind t; bind t send-prefix
 unbind C-b
 # toggle prefix suitable for (double-decker) tmux in tmux windows
 bind -n C-M-t \
     if-shell "[ \"`tmux show-options prefix`\" = 'prefix C-t' ]" \
-        "set-option prefix C-s; unbind -n M-Up;           unbind -n M-PageUp" \
-        "set-option prefix C-t;   bind -n M-Up copy-mode;   bind -n M-PageUp copy-mode" \
+        "set prefix C-s; unbind -n M-Up;           unbind -n M-PageUp" \
+        "set prefix C-t;   bind -n M-Up copy-mode;   bind -n M-PageUp copy-mode" \
         #
 
 set -g default-terminal "screen-256color"  # FIXME handle TERM=tmux-256color from elsewhere
@@ -85,25 +85,27 @@ run '~/.tmux/plugins/tpm/tpm'
 ###############################################################################
 # Base Options (override sensible defaults where needed)
 ###############################################################################
-set-option -g base-index 1
-set-option -g pane-base-index 1
-set-option -g history-limit 10000000
-set-option -g status-keys vi
-set-window-option -g mode-keys vi
-set-option -g display-time 2500
-set-window-option -g monitor-activity on
-set-window-option -g clock-mode-style 24
-set-window-option -g wrap-search off
+set -g base-index 1
+set -g pane-base-index 1
+set -g history-limit 10000000
+set -g status-keys vi
+setw -g mode-keys vi
+set -g display-time 2500
+setw -g monitor-activity on
+setw -g clock-mode-style 24
+setw -g wrap-search off
 
 # override @dracula to have colored window status
-set-window-option -g window-status-style fg=brightblack
-set-window-option -g window-status-current-style fg=green,bright
-set-window-option -g window-status-activity-style fg=yellow,bright
-set-window-option -g window-status-bell-style fg=red,bright
+setw -g window-status-style fg=brightblack
+setw -g window-status-current-style fg=green,bright
+setw -g window-status-activity-style fg=yellow,bright
+setw -g window-status-bell-style fg=red,bright,blink
+setw -g window-status-format " #I:#{b:pane_current_path}#F "
+setw -g window-status-current-format " #I:#{b:pane_current_path}#F "
 
 # pane border status at top of each pane
-set-option -g pane-border-status top
-set-option -g pane-border-format " #P: #{pane_current_command} "
+set -g pane-border-status top
+set -g pane-border-format " #P: #{pane_current_command} "
 
 ###############################################################################
 # Copy Mode
@@ -237,8 +239,8 @@ bind -n C-M-c split-window -v -b -c "#{pane_current_path}" claude
 ###############################################################################
 # Mac-specific settings
 ###############################################################################
-if-shell "type reattach-to-user-namespace" 'set-option -g default-command "reattach-to-user-namespace -l env SHLVL=0 bash -l"'
-if-shell "! type reattach-to-user-namespace" 'set-option -g default-command "env SHLVL=0 bash -l"'
+if-shell "type reattach-to-user-namespace" 'set -g default-command "reattach-to-user-namespace -l env SHLVL=0 bash -l"'
+if-shell "! type reattach-to-user-namespace" 'set -g default-command "env SHLVL=0 bash -l"'
 
 
 ###############################################################################
